// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`message template generates a bvb away message 1`] = `
"⚠️123h-Warnung!⚠️

Heute, 01.01.1970 - 01:00

AWAY vs HOME

🏕BVB-Auswärtsspiel

Vermeidet Kneipen mit TV
"
`;

exports[`message template generates a bvb homecoming message 1`] = `
"⚠️123h-Warnung!⚠️

Heute, 01.01.1970 - 01:00

HOME vs AWAY

🏠BVB-Heimspiel

Vermeidet Innenstadt / U42 / U46 / Kreuzviertel / Borsigplatz / Uni-Parkplatz
"
`;

exports[`message template generates a message for more than tomorrow 1`] = `
"⚠️123h-Warnung!⚠️

03.03.1973 - 10:46

AWAY vs HOME

🏕BVB-Auswärtsspiel

Vermeidet Kneipen mit TV
"
`;

exports[`message template generates a message for tomorrow 1`] = `
"⚠️123h-Warnung!⚠️

Morgen, 02.01.1970 - 04:46

AWAY vs HOME

🏕BVB-Auswärtsspiel

Vermeidet Kneipen mit TV
"
`;

exports[`message template generates an EM Dortmund Location message 1`] = `
"⚠️123h-Warnung!⚠️

Heute, 01.01.1970 - 01:00

AWAY vs HOME

🇪🇺EM-Spiel
🏟️Dieses Spiel findet in Dortmund statt

Vermeidet Innenstadt / U42 / U46 / Kreuzviertel / Borsigplatz / Uni-Parkplatz
"
`;

exports[`message template generates an EM German Team in Dortmund Location message 1`] = `
"⚠️123h-Warnung!⚠️

Heute, 01.01.1970 - 01:00

AWAY vs HOME

🇪🇺EM-Spiel
🇩🇪Spiel des deutschen Team
🏟️Dieses Spiel findet in Dortmund statt

Vermeidet die Innenstadt und Kneipen mit TV.
Am besten einfach nicht raus gehen.
Lasst alle Hoffnungen fahren und verbarrikadiert euch.
Es ist ein Deutschland-Spiel IN Dortmund 😱😱😱
"
`;

exports[`message template generates an EM german team message 1`] = `
"⚠️123h-Warnung!⚠️

Heute, 01.01.1970 - 01:00

AWAY vs HOME

🇪🇺EM-Spiel
🇩🇪Spiel des deutschen Team

Vermeidet die Innenstadt und Kneipen mit TV!
"
`;
